assets/stylesheets/index.css
@font-face {
  font-family: 'minecraft';
  src: url('/assets/fonts/MinecraftRegular.otf') format('opentype');
}

@keyframes pop {
    from {
        transform:scale(0.95)
    }
    50% {
        transform:scale(1)
    }
    to {
        transform:scale(0.95)
    }
}

* {
  box-sizing: border-box;
  font-family: 'minecraft';
}

html {
  padding: 0;
  margin: 0;
}

body {
  margin: 0;
  height: 100%;
  background-color: #1a1a1a;
  color: #eee;
  text-align: center;
  overflow-x: hidden;
}

.card {
  margin: auto;
  border-left: 6px solid #eee;
  background-color: #222;
  padding: 15px;
  margin-bottom: 20px;
  box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
  width: 370px;
}

.card p {
  margin-bottom: 10px;
}

.card img {
  display: block;
  margin: auto;
}

#splash {
    color: #FFFF00;
    font-size: 1.3em;
    text-shadow: 3px 3px #3F3F00;
    padding: 40px;
    position: relative;
    left: 130px;
    bottom: 30px;
}

.tilt {
    transform: rotate(-25deg);
}

.pop {
    animation: pop 0.58s infinite;
}

.section {
  display: none;
  padding: 95px 20px 20px;
}

#navbar {
  position: fixed;
  width: 100%;
  background-color: black;
}

.navButton {
  float: left;
  padding: 10px 20px;
  border: none;
  border-top: 3px solid black;
  cursor: pointer;
  font-size: 2vw;
  background-color: black;
  color: white;
}

.navButton:hover {
  background-color: white !important;
  color: black !important;
}

#footer {
  position: fixed;
  bottom: 10px;
  left: 10px;
}

#footer a {
  color: white;
}

